# slambook2-edit

./: .gitignore  README.md
ch10/: CMakeLists.txt
ch12/dense_RGBD/: CMakeLists.txt
ch12/dense_mono/: CMakeLists.txt
ch13/: CMakeLists.txt
ch13/app/: CMakeLists.txt
ch13/config/: default.yaml
ch13/include/myslam/: alike.hpp  soft_detect.hpp
ch13/src/: CMakeLists.txt  frontend.cpp  get_patches.cpp  visual_odometry.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch6/: CMakeLists.txt  g2oCurveFitting.cpp
ch7/: CMakeLists.txt
ch8/: CMakeLists.txt
ch9/: CMakeLists.txt
